@@ -1,6 +1,7 @@
 package ieci.tecdoc.sgm.cripto.validacion.impl.afirma;
 
 import ieci.tecdoc.sgm.core.config.impl.spring.MultiEntityContextHolder;
+import ieci.tecdoc.sgm.core.services.cripto.firma.ResultadoValidacionFirma;
 import ieci.tecdoc.sgm.core.services.cripto.validacion.CriptoValidacionException;
 import ieci.tecdoc.sgm.core.services.cripto.validacion.InfoCertificado;
 import ieci.tecdoc.sgm.core.services.cripto.validacion.ResultadoValidacion;
@@ -23,7 +24,10 @@ import java.util.Properties;
 
 import org.apache.commons.lang.StringUtils;
 
-import sun.misc.BASE64Encoder;
+import es.gob.afirma.transformers.TransformersFacade;
+import es.gob.afirma.tsaServiceInvoker.ws.DSSServicesManager;
+import es.gob.afirma.utils.UtilsBase64;
+
 
 public class ValidationManagerAFirmaImpl implements ServicioCriptoValidacion {
 
@@ -36,8 +40,9 @@ public class ValidationManagerAFirmaImpl implements ServicioCriptoValidacion {
 		try {
 			AFirmaValidacionConfiguration config = loadConfig();
 		    byte[]res = crearResumenReal(config.getAlgorithm(), config.getProvider(), psBase64Document);
-		    BASE64Encoder encoder = new BASE64Encoder();
-		    String b64 = encoder.encodeBuffer(res);
+		    //BASE64Encoder encoder = new BASE64Encoder();
+		    //String b641 = encoder.encodeBuffer(res);
+		    String b64 = UtilsBase64.encodeBytes(res);		    
 		    return b64;
 		} catch (Exception e) {
 		    log.error("Error al crear hash de documento [createHash] [Exception]", e.fillInStackTrace());
@@ -45,62 +50,53 @@ public class ValidationManagerAFirmaImpl implements ServicioCriptoValidacion {
 	    }
 	}
 
+	public ResultadoValidacion validateSignature(String psB64Firma)	throws CriptoValidacionException {
+		
+		//[DipuCR-Agustin #341] Validar firma
+		// Hasta que no se retorne la peticion la validacion se contempla erronea
+		ResultadoValidacion oResult = new ResultadoValidacion();
+		Map<String, Object> propertiesResult = null;
+		oResult.setResultadoValidacion(ResultadoValidacion.VALIDACION_ERROR);
+		
+		DSSServicesManager dsssm = new DSSServicesManager();
+    	
+    	try {
+			
+    		propertiesResult = dsssm.doDSSAfirmaVerify(psB64Firma);
+    		oResult.setResultadoValidacion(ResultadoValidacion.VALIDACION_OK);  
+    		oResult.setPropertiesResult(propertiesResult);
+		} catch (Exception e) {
+		    log.error("Error al validar la firma del formulario, el certificado de firma no es válido [validateCertificate][Exception]", e.fillInStackTrace());
+		    throw new CriptoValidacionException(CriptoValidacionException.EXC_GENERIC_EXCEPCION, e.getMessage(), e);
+		}		 
+		  	
+		return oResult;
+	}
 	public ResultadoValidacion validateCertificate(String psB64Certificate)	throws CriptoValidacionException {
 
-		AFirmaValidacionConfiguration config = loadConfig();
-		ValidarCertificado vc = new ValidarCertificado();
-		vc.setTipo(new Tipo("salida"));
-		vc.setVersion(new Version("1.1"));
-		InformacionError ie = new InformacionError();
-		vc.setInformacionError(ie);
-
-		try {
-			// Configuración de seguridad
-			Properties props = config.getConfSeguridad();
-	    	if (props == null) {
-	    	    throw new Exception("no se tiene acceso a las propiedades de seguridad");
-	    	}
-
-		    ValidacionRemoteServiceLocator vrsl = new ValidacionRemoteServiceLocator();
-		    vrsl.setValidarCertificadoEndpointAddress(config.getPathServicios()+"/"+config.getNombreServicioValidarCertificado());
-
-		    ValidacionRemote vr = vrsl.getValidarCertificado();
-		    // Manejador para securizar los mensajes SOAP a partir de la configuración de seguridad de la entidad
-		    ((ValidarCertificadoSoapBindingStub)vr).setHandler(new HandlerAFirma(props));
-
-		    String peticion = Conversor.tratarEntradaValidar(psB64Certificate, this);
-
-	    	// Configuración de proxy si existe
-	    	if (StringUtils.isNotBlank(props.getProperty("http.proxyHost"))) {
-
-	    		// Nueva propiedad de configuración para el proxy de
-	    		// Excepciones del proxy: a list of hosts that should be reached directly, bypassing the proxy.
-	    		// This is a list of patterns separated by '|'. The patterns may start or end with a '*' for wildcards.
-	    		// Any host matching one of these patterns will be reached through a direct connection instead of through a proxy.
-	    		String nonProxyHostsProperty = props.getProperty("http.nonProxyHosts");
-	    		if (nonProxyHostsProperty != null) {
-	    			System.setProperty("http.nonProxyHosts", nonProxyHostsProperty);
-	    		}
-
-				System.setProperty("http.proxyHost", props.getProperty("http.proxyHost"));
-				System.setProperty("http.proxyPort", props.getProperty("http.proxyPort"));
-				System.setProperty("http.proxyUser", props.getProperty("http.proxyUser"));
-				System.setProperty("http.proxyPassword", props.getProperty("http.proxyPassword"));
-	    	}
-
-		    String res = vr.validarCertificado(peticion);
-		    Conversor.tratarSalidaValidar(vc, res);
-		    ie.setCodigo(new Codigo("0"));
-
-		} catch (ExcepcionAFirma eaf) {
-		    throw new CriptoValidacionException(eaf.getMessage(), eaf);
-	    } catch (Exception e) {
+		//[DipuCR-Agustin #341] Validar certificado		
+		// Hasta que no se retorne la peticion la validacion se contempla erronea
+		ResultadoValidacion oResult = new ResultadoValidacion();
+		Map<String, Object> propertiesResult = null;
+		oResult.setResultadoValidacion(ResultadoValidacion.VALIDACION_ERROR);
+		InfoCertificado ic = new InfoCertificado();
+		
+		DSSServicesManager dsssm = new DSSServicesManager();
+    	
+    	try {
+			
+propertiesResult = dsssm.doDSSAfirmaVerifyCertificate(psB64Certificate);
+    		oResult.setResultadoValidacion(ResultadoValidacion.VALIDACION_OK); 
+    		oResult.setPropertiesResult(propertiesResult);    		
+    		
+		} catch (Exception e) {
 		    log.error("Error al validar certificado de usuario [validateCertificate][Exception]", e.fillInStackTrace());
 		    throw new CriptoValidacionException(CriptoValidacionException.EXC_GENERIC_EXCEPCION, e.getMessage(), e);
-	    }
-
-		return getResultadoValidacionServicio(vc);
+		}		 
+		  	
+		return getResultadoValidacionServicio(oResult);
 	}
+    	
 
 	public boolean validateHash(String psBase64Document, String psB64Hash) throws CriptoValidacionException {
 
@@ -125,57 +121,36 @@ public class ValidationManagerAFirmaImpl implements ServicioCriptoValidacion {
     	return md.digest();
     }
 
-	private ResultadoValidacion getResultadoValidacionServicio(ValidarCertificado poResult){
+	private ResultadoValidacion getResultadoValidacionServicio(ResultadoValidacion oResult) throws CriptoValidacionException{
 
-		if (poResult == null) {
-			return null;
-		}
-
-		// Procesar la respuesta
-		ResultadoValidacion oResult = new ResultadoValidacion();
-		if (ResultadoValidacion.VALIDACION_OK.equals(((ResultadoValidarCertificado)poResult.getResultado()).getValida().get())){
-			oResult.setResultadoValidacion(ResultadoValidacion.VALIDACION_OK);
-		} else {
-			oResult.setResultadoValidacion(ResultadoValidacion.VALIDACION_ERROR);
-			oResult.setMensajeValidacion(((ResultadoValidarCertificado)poResult.getResultado()).getInformacionAuxiliar().get());
-			return oResult;
-		}
-
-		InfoCertificado oInfo = new InfoCertificado();
 		try {
-			oInfo.setCif(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getCIF().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setCorporateName(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getRazonSocial().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setIssuer(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getEmisor().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setFirstname(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getNombre().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setLastname1(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getApellido1().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setLastname2(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getApellido2().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setName(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getNombreCompleto().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setNif(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getNIF().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setSerialNumber(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getNumeroSerie().get());
-		} catch(NullPointerException e){}
-		try {
-			oInfo.setSubject(((ResultadoValidarCertificado)poResult.getResultado()).getInfoCertificado().getAsunto().get());
-		} catch(NullPointerException e){}
-
-		oResult.setCertificado(oInfo);
-
+		
+			Map<String, String> certificateInfo = (Map<String, String>) oResult.getPropertiesResult().get(TransformersFacade.getInstance().getParserParameterValue("CertificateInfo"));
+			
+			// Procesar la respuesta	
+			InfoCertificado oInfo = new InfoCertificado();
+			
+			oInfo.setCif(certificateInfo.get("NIFResponsable"));
+			oInfo.setCorporateName(certificateInfo.get("NombreApellidosResponsable"));
+			oInfo.setName(certificateInfo.get("NombreApellidosResponsable"));
+			oInfo.setFirstname(certificateInfo.get("nombreResponsable"));
+			oInfo.setIssuer(certificateInfo.get("OrganizacionEmisora"));;
+			oInfo.setLastname1(certificateInfo.get("primerApellidoResponsable"));
+			oInfo.setLastname2(certificateInfo.get("segundoApellidoResponsable"));
+			oInfo.setNif(certificateInfo.get("NIFResponsable"));
+			oInfo.setSerialNumber(certificateInfo.get("numeroSerie"));
+			oInfo.setSubject(certificateInfo.get("subject"));		
+			
+			oResult.setCertificado(oInfo);
+		
+		} catch (Exception e) {
+		    log.error("Error al obtener datos del certificado [validateCertificate][Exception]", e.fillInStackTrace());
+		    throw new CriptoValidacionException(CriptoValidacionException.EXC_GENERIC_EXCEPCION, e.getMessage(), e);
+		}	
+		
 		return oResult;
+		
+		
 	}
 
 	public AFirmaValidacionConfiguration loadConfig() throws CriptoValidacionException {
@@ -193,4 +168,5 @@ public class ValidationManagerAFirmaImpl implements ServicioCriptoValidacion {
 
 		return config;
 	}
+
 }
